doc: session and validation_code example with jwt
