# internal/controller/item_controller.go
@@ -20,10 +20,14 @@ func (ctrl *ItemController) Get(c *gin.Context) {
 //	@Summary	创建账目
 //	@Accept		json
 //	@Produce	json
+//
+//	@Security	Bearer
+//
 //	@Param		amount		body		int				true	"金额（单位：分）"	example(100)
 //	@Param		kind		body		queries.Kind	true	"类型"		example(expenses)
 //	@Param		happened_at	body		string			true	"发生时间"		example(2023-09-26T00:00:00Z)
-//	@Param		tag_ids		body		[]string		true	"标签ID列表"	example([1,2,3])
+//	@Param		tag_ids		body		[]int		true	"标签ID列表"	example([1,2,3])
+//
 //	@Success	200			{object}	api.CreateItemResponse
 //	@Failure	401			{string}	string	无效的JWT
 //	@Failure	422			{string}	string	参数错误
@@ -31,7 +35,8 @@ func (ctrl *ItemController) Get(c *gin.Context) {
 func (ctrl *ItemController) Create(c *gin.Context) {
 	var body api.CreateItemRequest
 	if err := c.ShouldBindJSON(&body); err != nil {
-		c.String(422, "参数错误")
+		c.String(422, "参数错误", err)
+		return
 	}
 	// 获取当前登录用户
 	me, _ := c.Get("me")
