# internal/controller/session_controller.go
@@ -1,6 +1,7 @@
 package controller
 
 import (
+	"account/api"
 	queries "account/config/sqlc"
 	"account/internal/database"
 	"account/internal/jwt_helper"
@@ -12,11 +13,21 @@ import (
 
 type SessionController struct{}
 
+// CreateSession
+//
+//	@Summary	登录
+//	@Accept		json
+//	@Produce	json
+//
+//	@Param		email	body		string						true	"邮件地址"
+//	@Param		code	body		string						true	"验证码"
+//
+//	@Success	200		{object}	api.CreateSessionResponse	数据
+//	@Failure	400		{string}	string						无效的验证码
+//	@Failure	500		{string}	string						服务器错误
+//	@Router		/api/v1/session [post]
 func (ctrl *SessionController) Create(c *gin.Context) {
-	var reqBody struct {
-		Email string `json:"email" binding:"required"`
-		Code  string `json:"code" binding:"required"`
-	}
+	var reqBody api.CreateSessionRequest
 	// 把JSON格式的请求体 转换为 go 的结构体
 	if err := c.ShouldBindJSON(&reqBody); err != nil {
 		c.String(http.StatusBadRequest, "无效的参数")
@@ -50,10 +61,15 @@ func (ctrl *SessionController) Create(c *gin.Context) {
 	}
 	// 正常情况下需要先创建相应体的结构体，再赋值
 	// gin 提供了 H 方法，可以省略定义结构体的步骤，直接定义 json
-	c.JSON(http.StatusOK, gin.H{
-		"jwt":    jwt,
-		"userId": user.ID,
-	})
+	// c.JSON(http.StatusOK, gin.H{
+	// 	"jwt":    jwt,
+	// 	"userId": user.ID,
+	// })
+	res := api.CreateSessionResponse{
+		Jwt:    jwt,
+		UserID: user.ID,
+	}
+	c.JSON(200, res)
 
 }
 
