# internal/router/router.go
@@ -18,6 +18,9 @@ import (
 func loadControllers() []controller.Controller {
 	return []controller.Controller{
 		&controller.SessionController{},
+		&controller.MeController{},
+		&controller.ItemController{},
+		&controller.ValidationCodeController{},
 	}
 }
 
@@ -28,7 +31,8 @@ func New() *gin.Engine {
 	database.Connect()
 	// 创建路由
 	r := gin.Default()
-	r.GET("/ping", controller.Ping)
+	// 应用中间件
+	r.Use(middleware.Me([]string{"/swagger", "/api/v1/session", "/api/v1/validation_codes", "/ping"}))
 	// 注册路由
 	rg := r.Group("/api")
 	for _, ctrl := range loadControllers() {
@@ -37,9 +41,7 @@ func New() *gin.Engine {
 	// 文档路由及配置
 	docs.SwaggerInfo.Version = "1.0"
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-
-	// 应用中间件
-	r.Use(middleware.Me([]string{"/swagger", "/api/v1/session", "/api/v1/validation_codes", "/ping"}))
+	r.GET("/ping", controller.Ping)
 
 	return r
 }
